# photoname

./: .gitignore  LICENSE  README  README.md  Setup.lhs  TODO  TODO.md  changelog.md  package.yaml  photoname.cabal  stack.yaml
doc/: hcar-photoname  hcar-photoname.tex
doc/dev/: notes
src/: Main.hs  photoname.hs
src/Photoname/: Common.hs  Date.hs  DateFormat.hs  Exif.hs  Opts.hs  Serial.hs  SerialFormat.hs
src/app/: photoname.hs
src/app/Photoname/: Opts.hs
src/lib/Photoname/: Common.hs  CopyLink.hs  Date.hs  DateFormat.hs  Exif.hs  Exiv2.hs  Links.hs  Log.hs  Opts.hs  SerialFormat.hs
src/tests/: TestHelp.hs  TestLink.hs  Util.hs  runtests.hs
src/tests/Photoname/Test/EndToEnd/: Link.hs  Util.hs
src/tests/Photoname/Test/Unit/: Date.hs
src/tests/Test/Photoname/: Date.hs
testsuite/: TestHelp.hs  TestLink.hs  Util.hs  runtests.hs
util/: boring  install.hs  post-get
util/resources/: test.conf
util/resources/AppDir/: AppRun  photoname.desktop
util/resources/AppDir/usr/share/applications/: photoname.desktop
util/resources/appimage/: photoname.desktop
util/resources/test/: test.conf
