Name:                photoname
Version:             003
synopsis:            Name and store JPEG photo files based on shoot date
description:         
   Command-line utility for renaming/moving photo image files based on 
   EXIF tags. Written in Haskell.
License:             GPL
License-file:        LICENSE
Author:              Dino Morelli 
Maintainer:          <dino@ui3.info>
Build-Depends:       base, exif, filepath, old-locale, parsec, time, unix

Executable:          photoname
Main-is:             Main.hs
ghc-options:         -O -Wall
hs-source-dirs:      src
