name:                photoname
version:             2.0
synopsis:            Name and store JPEG photo files based on shoot date
description:         
   Command-line utility for renaming/moving photo image files based on 
   EXIF tags. Written in Haskell.
license:             BSD3
license-file:        LICENSE
copyright:           2007, 2008 Dino Morelli 
author:              Dino Morelli 
maintainer:          <dino@ui3.info>
stability:           stable
homepage:            http://ui3.info/d/proj/photoname.html
build-depends:       base, exif, filepath, mtl, old-locale, parsec, time, unix

executable:          photoname
main-is:             Main.hs
ghc-options:         -O -Wall
hs-source-dirs:      src
