cabal-version: 2.2

name: photoname
version: 5.4
synopsis: Rename photo image files based on EXIF shoot date
description: Command-line utility for renaming/moving photo image files based
  on EXIF tags.
category: Application, Console
stability: stable
homepage: https://github.com/dino-/photoname
bug-reports: https://github.com/dino-/photoname/issues
author: Dino Morelli
maintainer: Dino Morelli <dino@ui3.info>
copyright: 2007 Dino Morelli
license: ISC
license-file: LICENSE
build-type: Simple
extra-source-files:
  doc/hcar-photoname.tex
  .gitignore
  hsinstall/share/applications/photoname.desktop
  hsinstall/share/icons/hicolor/scalable/apps/photoname.svg
  README.md
  stack.yaml
  stack.yaml.lock
  util/resources/test/dateTime.jpg
  util/resources/test/dateTime.webp
  util/resources/test/dateTimeDigitized.jpg
  util/resources/test/dateTimeOriginal.jpg
  util/resources/test/foobar-2021-10-04-17-29-49-942.jpg
  util/resources/test/noDate.jpg
  util/resources/test/noExif.jpg
  util/resources/test/notAnImage.txt
  util/resources/test/test.conf
extra-doc-files:
  changelog.md

source-repository head
  type: git
  location: https://github.com/dino-/photoname

common lang
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
  ghc-options:
    -fwarn-tabs
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base >=4.5 && <5.0
    , directory >= 1.3.6 && < 1.4
    , filepath >= 1.4.2 && < 1.5
    , unix >= 2.7.2 && < 2.8

library
  import: lang
  exposed-modules:
    Photoname.Common
    Photoname.CopyLink
    Photoname.Date
    Photoname.Exif
    Photoname.Exiv2
    Photoname.Links
    Photoname.Log
  other-modules:
    Paths_photoname
  autogen-modules:
    Paths_photoname
  hs-source-dirs:
    src/lib
  build-depends:
      containers >= 0.6.5 && < 0.7
    , formatting >= 7.2.0 && < 7.3
    , hsexif >= 0.6.1 && < 0.7
    , hslogger >= 1.3.1 && < 1.4
    , mtl >= 2.2.2 && < 2.3
    , parsec >= 3.1.15 && < 3.2
    , process >= 1.6.16 && < 1.7
    , time >= 1.11.1 && < 1.13

executable photoname
  import: lang
  main-is: photoname.hs
  other-modules:
    Photoname.Opts
    Paths_photoname
  autogen-modules:
    Paths_photoname
  hs-source-dirs:
      src/app
  build-depends:
      ansi-wl-pprint >= 0.6.9 && < 0.7
    , formatting >= 7.2.0 && < 7.3
    , heredoc >= 0.2.0 && < 0.3
    , hslogger >= 1.3.1 && < 1.4
    , optparse-applicative >= 0.17.1 && < 0.18
    , photoname

test-suite photoname-tests
  import: lang
  type: exitcode-stdio-1.0
  main-is: runtests.hs
  other-modules:
    Photoname.Test.EndToEnd.Link
    Photoname.Test.EndToEnd.Util
    Photoname.Test.Unit.Date
  hs-source-dirs:
    src/tests
  build-depends:
      photoname
    , process >= 1.6.16 && < 1.7
    , regex-posix
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , time >= 1.11.1 && < 1.13
